infrastructure/modules/packages/socials-server/resource.nat_gateway.tf
resource "aws_nat_gateway" "ngw" {
  allocation_id = aws_eip.nat.id
  subnet_id = aws_subnet.public.id

  tags = {
    Name = "${var.stack_name}-public-nat-gateway"
  }
}
